--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			top: 0;
 			bottom: 0; 
 			left: 0;
-			width: 230px; /* Width of navigation frame */
+			width: 210px; /* Width of navigation frame */
 			height: 100%;
 			background: rgb(177, 108, 22);
 		}
@@ -90,6 +90,7 @@
 				<h1>Heading</h1>
 				<p> Hello and welcome to Memez Central. The internet is a fantastic medium for transporting information. We may use it for a variety of important tasks like searching for information, communicating, and shopping. While we may do all of these thigs on a daily basis, we may also want to look at funny <b>videos and memes</b>. That is what this website is for. I have compiled here some of my favorite memes and videos and would like to share them with all of you.</p>
 				<p><li><a href="https://www.youtube.com/watch?v=vJJEVBMtOEQ" target="_blank"><img src="download.jpg"></a></li></p>
+                <p><li><a href="https://www.youtube.com/watch?v=M4a_oo4y_kk" target="_blank"><img src=""></a></li></p>
                 <center>
                     
                 
